<resources>
    <string name="app_name">Kraftwerk</string>
    <string name="_22">22</string>
    <string name="format">FORMAT</string>
    <string name="mhd">MHD</string>
    <string name="normal">NORMAL</string>
    <string name="_360_tage">360 TAGE</string>
    <string name="PLUS">+</string>
    <string name="Minus">-</string>
    <string name="t_disc_fs">T Disc / FS</string>
    <string name="u2191">↑</string>
    <string name="u2193">↓</string>
    <string name="toast_message1">Werte gespeichert</string>
</resources>